[gd_scene load_steps=4 format=3 uid="uid://vi51a2ildbkb"]

[ext_resource type="Script" path="res://entities/bullet/bullet_controller.gd" id="1_hvusx"]
[ext_resource type="Texture2D" uid="uid://dgdkiifam4f85" path="res://entities/bullet/bullet.png" id="2_o336p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gqvt8"]
radius = 20.025

[node name="Bullet" type="Area2D"]
scale = Vector2(0.2, 0.2)
collision_layer = 8
collision_mask = 13
script = ExtResource("1_hvusx")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.521569, 0.258824, 1)
texture = ExtResource("2_o336p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gqvt8")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
